--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!--container id contains header section of page -->
     <div id="container" style="background-color:#fff9f3;position: absolute;width:100%;">
-        <img src="psdlayers/Logo.png" style="margin-left:215px;margin-top:20px;height:55px;width:55px;">
+        <img src="assets/Logo.png" style="margin-left:215px;margin-top:20px;height:55px;width:55px;">
 
         <!--horizontal navigation bar-->
         <div class="navbar" style="float: right;">
@@ -64,17 +64,17 @@
             <a id="visit" class="nav-link active" aria-current="page" href="#">Visit our campus</a>
 
             <!--right leaf-->
-            <img id="rl" src="psdlayers/rightleaf.png" style="margin-top:358px;margin-right:60px;float:right;">
+            <img id="rl" src="assets/rightleaf.png" style="margin-top:358px;margin-right:60px;float:right;">
         </div>
     </div>
 
     <!--left leaf-->
     <div style="position:absolute;float: left;margin-top:100px;">
-        <img id="ll" src="psdlayers/leftleaf.png">
+        <img id="ll" src="assets/leftleaf.png">
     </div>
 
     <!--curve design under heading class-->
-    <img id="curveimage" src="psdlayers/curve.png">
+    <img id="curveimage" src="assets/curve.png">
 
     <h2 style="margin-left:565px;font-weight: bolder;font-family:Work Sans;position: absolute;margin-top:800px;">Our
         Department</h2>
@@ -87,31 +87,31 @@
     <!-- card class that contains cards -->
     <div class="cards">
         <div class="card" style="width: 20rem;margin-left:200px;">
-            <img src="psdlayers/notebook.png" class="card-img-top">
+            <img src="assets/notebook.png" class="card-img-top">
             <div class="card-body" style="background-color:#f9703a;">
-                <p class="card-text" style="text-align: center;color:#ffffff;font-weight: bold;">Online Education</p>
+                <a href="" style="text-decoration: none;"><p class="card-text" style="text-align: center;color:#ffffff;font-weight: bold;">Online Education</p></a>
             </div>
         </div>
         <div class="card" style="width: 20rem;margin-left:10px;">
-            <img src="psdlayers/mail.png" class="card-img-top">
+            <img src="assets/mail.png" class="card-img-top">
             <div class="card-body" style="background-color:#80be41;">
-                <p class="card-text" style="text-align: center;color:#ffffff;font-weight: bold;">Online Education</p>
+              <a href="" style="text-decoration: none;"><p class="card-text" style="text-align: center;color:#ffffff;font-weight: bold;">Online Education</p></a>
             </div>
         </div>
         <div class="card" style="width: 20rem;margin-left:10px;">
-            <img src="psdlayers/pc.png" class="card-img-top">
+            <img src="assets/pc.png" class="card-img-top">
             <div class="card-body" style="background-color:#ffb258;">
-                <p class="card-text" style="text-align: center;color:#ffffff;font-weight: bold;">Online Education</p>
+                <a href="" style="text-decoration: none;"><p class="card-text" style="text-align: center;color:#ffffff;font-weight: bold;">Online Education</p></a>
             </div>
         </div>
     </div>
     <div style="margin-top:1330px;position: absolute;">
 
         <!--Outer Half transparent circle at left-->
-        <img class="outercircle" src="psdlayers/bg shape (1).png">
+        <img class="outercircle" src="assets/bg shape (1).png">
 
         <!--image on the outerircle with play button-->
-        <img id="fort" style="height: 340px;width: 440px;" src="psdlayers/fort.png">
+        <img id="fort" style="height: 340px;width: 440px;" src="assets/fort.png">
 
         <!--limitcontainer that contains content on right of outercircle-->
         <div class="limitcontainer">
@@ -131,10 +131,10 @@ student to teacher ratio, and increased interactions with faculty.
 </pre>
 
             <div style="display: flex;">
-                <img style="margin-top:30px;height: 40px;width:90px;" src="psdlayers/4000 Students.png">
-                <img style="margin-left:100px;margin-top:30px;height: 40px;width:50px;" src="psdlayers/260 Courses.png">
+                <img style="margin-top:30px;height: 40px;width:90px;" src="assets/4000 Students.png">
+                <img style="margin-left:100px;margin-top:30px;height: 40px;width:50px;" src="assets/260 Courses.png">
                 <img style="margin-left:100px;margin-top:30px;height: 40px;width:90px;"
-                    src="psdlayers/5679 Hours video.png">
+                    src="assets/5679 Hours video.png">
             </div>
         </div>
 
@@ -142,14 +142,14 @@ student to teacher ratio, and increased interactions with faculty.
         <span id="uni" style="color:#252c3a;"> Around the University</span>
 
         <!--half-circle background in rightside-->
-        <img class="halfcircle" src="psdlayers/semicircle.png">
+        <img class="halfcircle" src="assets/semicircle.png">
 
         <!--div containing cards row1-->
         <div style="display: flex; margin-top:200px;margin-left:180px;z-index: 1;position:absolute;">
 
             <!--card1-->
             <div class="firstrowcard" class="card" style="width: 14rem;height:19rem;">
-                <img style="height:154px;" src="psdlayers/grapic card.png" class="card-img-top">
+                <img style="height:154px;" src="assets/grapic card.png" class="card-img-top">
                 <div class="card-body">
                     <h6 id="card1h6" class="card-title">Photoshop CC 2018 Essential
                         Training: The Basics</h6>
@@ -160,7 +160,7 @@ student to teacher ratio, and increased interactions with faculty.
 
             <!--card2-->
             <div class="firstrowcard" class="card" style="width: 14rem;height:19rem;margin-left:15px;">
-                <img src="psdlayers/cardpic2.png" class="card-img-top">
+                <img src="assets/cardpic2.png" class="card-img-top">
                 <div class="card-body">
                     <h6 class="card234" class="card-title">Get Started Coding Android
                         Apps With Kotlin</h6>
@@ -171,7 +171,7 @@ student to teacher ratio, and increased interactions with faculty.
 
             <!--card3-->
             <div class="firstrowcard" class="card" style="width: 14rem;height:19rem;margin-left:15px;">
-                <img src="psdlayers/cardpic3.png" class="card-img-top">
+                <img src="assets/cardpic3.png" class="card-img-top">
                 <div class="card-body">
                     <h6 class="card234" class="card-title">Create Turntable Animations
                         With Cinema 4D</h6>
@@ -182,7 +182,7 @@ student to teacher ratio, and increased interactions with faculty.
 
             <!--card4-->
             <div class="card" style="width: 14rem;height:19rem;margin-left:15px;">
-                <img style="height:157px;" src="psdlayers/cardpic4.png" class="card-img-top">
+                <img style="height:157px;" src="assets/cardpic4.png" class="card-img-top">
                 <div class="card-body">
                     <h6 class="card234" class="card-title">A Beginner’s Guide to the
                         New Bootstrap 4 Grid</h6>
@@ -197,7 +197,7 @@ student to teacher ratio, and increased interactions with faculty.
 
             <!--card1-->
             <div class="firstrowcard" class="card" style="width: 14rem;height:19rem;margin-left:15px;">
-                <img src="psdlayers/rc1.png" class="card-img-top">
+                <img src="assets/rc1.png" class="card-img-top">
                 <div class="card-body">
                     <h6 class="card234" class="card-title">A Designer’s Guide to Vue.js
                         Components</h6>
@@ -208,7 +208,7 @@ student to teacher ratio, and increased interactions with faculty.
 
             <!--card2-->
             <div class="firstrowcard" class="card" style="width: 14rem;height:19rem;margin-left:15px;">
-                <img src="psdlayers/rc2.png" class="card-img-top">
+                <img src="assets/rc2.png" class="card-img-top">
                 <div class="card-body">
                     <h6 class="card234" class="card-title">Code a Swift App With Realm
                         Mobile Database</h6>
@@ -219,7 +219,7 @@ student to teacher ratio, and increased interactions with faculty.
 
             <!--card3-->
             <div class="firstrowcard" class="card" style="width: 14rem;height:19rem;margin-left:15px;">
-                <img src="psdlayers/rc3.png" class="card-img-top">
+                <img src="assets/rc3.png" class="card-img-top">
                 <div class="card-body">
                     <h6 class="card234" class="card-title">10 Essential Design Tips in
                         Adobe Illustrator</h6>
@@ -230,7 +230,7 @@ student to teacher ratio, and increased interactions with faculty.
 
             <!--card4-->
             <div class="card" style="width: 14rem;height:19rem;margin-left:15px;">
-                <img style="height:157px;"src="psdlayers/rc4.png" class="card-img-top">
+                <img style="height:157px;"src="assets/rc4.png" class="card-img-top">
                 <div class="card-body">
                     <h6 class="card234" class="card-title">Modern PHP From The
                         Beginning</h6>
@@ -242,28 +242,28 @@ student to teacher ratio, and increased interactions with faculty.
 
         <!--bg for footer-->
         <div>
-            <img id="footbg" src="psdlayers/hat.png">
+            <img id="footbg" src="assets/hat.png">
         </div>
 
         <!--footer-->
         <div class="footer">
             <!--edmo div-->
             <div id="edmo" style="margin-left:150px;margin-top:50px;">
-                <img style="height:30px;position: absolute;z-index:0;" src="psdlayers/edmo.png">
-                <img style="margin-top:50px;float: left;top:0;left:0;" src="psdlayers/logoes.png">
-                <img style="position: absolute;top: 180px; left: 145px;" src="psdlayers/line.png">
+                <img style="height:30px;position: absolute;z-index:0;margin-left:-260px;" src="assets/edmo.png">
+                <a href=""><img style="margin-top:50px;float: left;top:0;left:0;" src="assets/logoes.png"></a>
+                <img style="position: absolute;top: 180px; left: 145px;" src="assets/line.png">
             </div>
 
             <!--feature div-->
             <div id="feature">
                 <p style="color: #ffffff;margin-top:50px;font-family:'Roboto';"> FEATURED PROGRAMS</p>
-                <img src="psdlayers/fixed.png">
+                <img src="assets/fixed.png">
             </div>
 
             <!--learning div-->
             <div id="learning">
                 <p style="color: #ffffff;margin-top:50px;font-family:'Roboto';">Learning</p>
-                <img src="psdlayers/plan.png">
+                <img src="assets/plan.png">
             </div>
 
             <!--support div-->
@@ -272,14 +272,19 @@ student to teacher ratio, and increased interactions with faculty.
                 <pre style="color:#969595;font-size:12px;font-family:'Roboto' ;">Write your email into below field and join our
 quick support forum.
             </pre>
-                <img src="psdlayers/Form.png">
+            <form action="">
+                <input id="mail" type="email" placeholder= "   Email address">
+                <button id="helpbut">GET HELP</button>
+            </form>
+           
+            <!-- <a href="" id="helpbut">GET HELP</a> -->
             </div>
         </div>
 
         <!--basefoot-->
         <div id="basefoot">
-            <img src="psdlayers/Copyright.png" style="float: left;margin-top: 20px;margin-left:200px;">
-            <img src="psdlayers/Site.png" style="float: right;margin-top: 20px;margin-right:100px;">
+            <img src="assets/Copyright.png" style="float: left;margin-top: 20px;margin-left:200px;">
+            <img src="assets/Site.png" style="float: right;margin-top: 20px;margin-right:100px;">
         </div>
     </div>
 </body>
