--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -111,7 +112,7 @@
         <img class="outercircle" src="assets/bg shape (1).png">
 
         <!--image on the outerircle with play button-->
-        <img id="fort" style="height: 340px;width: 440px;" src="assets/fort.png">
+        <a href="" style="text-decoration: none;"><img id="fort" style="height: 340px;width: 440px;" src="assets/fort.png"></a>
 
         <!--limitcontainer that contains content on right of outercircle-->
         <div class="limitcontainer">
@@ -154,7 +155,7 @@ student to teacher ratio, and increased interactions with faculty.
                     <h6 id="card1h6" class="card-title">Photoshop CC 2018 Essential
                         Training: The Basics</h6>
                     <p id="card1para" class="card-text">Graphics Design</p>
-                    <h6 class="card-text">Keep reading...</h6>
+                    <a href="" style="text-decoration: none; color: #252c3a;"><h6 class="card-text">Keep reading...</h6></a>
                 </div>
             </div>
 
@@ -165,7 +166,7 @@ student to teacher ratio, and increased interactions with faculty.
                     <h6 class="card234" class="card-title">Get Started Coding Android
                         Apps With Kotlin</h6>
                     <p id="cp234" class="card-text">Global System</p>
-                    <h6 id="keep234" class="card-text">Keep reading...</h6>
+                    <a href="" style="text-decoration: none;"><h6 id="keep234" class="card-text">Keep reading...</h6></a>
                 </div>
             </div>
 
@@ -176,7 +177,7 @@ student to teacher ratio, and increased interactions with faculty.
                     <h6 class="card234" class="card-title">Create Turntable Animations
                         With Cinema 4D</h6>
                     <p style="font-size:11px;" id="cp234" class="card-text">Computer & Information Technology</p>
-                    <h6 id="keep234" class="card-text">Keep reading...</h6>
+                    <a href="" style="text-decoration: none;"><h6 id="keep234" class="card-text">Keep reading...</h6></a>
                 </div>
             </div>
 
@@ -187,7 +188,7 @@ student to teacher ratio, and increased interactions with faculty.
                     <h6 class="card234" class="card-title">A Beginner’s Guide to the
                         New Bootstrap 4 Grid</h6>
                     <p id="cp234" class="card-text">Web Development</p>
-                    <h6 id="keep234" class="card-text">Keep reading...</h6>
+                    <a href="" style="text-decoration: none;"><h6 id="keep234" class="card-text">Keep reading...</h6></a>
                 </div>
             </div>
         </div>
@@ -202,7 +203,7 @@ student to teacher ratio, and increased interactions with faculty.
                     <h6 class="card234" class="card-title">A Designer’s Guide to Vue.js
                         Components</h6>
                     <p id="cp234" class="card-text">Art Deperments</p>
-                    <h6 id="keep234" class="card-text">Keep reading...</h6>
+                    <a href="" style="text-decoration: none;"><h6 id="keep234" class="card-text">Keep reading...</h6></a>
                 </div>
             </div>
 
@@ -213,7 +214,7 @@ student to teacher ratio, and increased interactions with faculty.
                     <h6 class="card234" class="card-title">Code a Swift App With Realm
                         Mobile Database</h6>
                     <p id="cp234" class="card-text">Music</p>
-                    <h6 id="keep234" class="card-text">Keep reading...</h6>
+                    <a href="" style="text-decoration: none;"><h6 id="keep234" class="card-text">Keep reading...</h6></a>
                 </div>
             </div>
 
@@ -224,7 +225,7 @@ student to teacher ratio, and increased interactions with faculty.
                     <h6 class="card234" class="card-title">10 Essential Design Tips in
                         Adobe Illustrator</h6>
                     <p id="cp234" class="card-text">Technology Information</p>
-                    <h6 id="keep234" class="card-text">Keep reading...</h6>
+                    <a href="" style="text-decoration: none;"><h6 id="keep234" class="card-text">Keep reading...</h6></a>
                 </div>
             </div>
 
@@ -235,7 +236,7 @@ student to teacher ratio, and increased interactions with faculty.
                     <h6 class="card234" class="card-title">Modern PHP From The
                         Beginning</h6>
                     <p id="cp234" class="card-text">Data Science</p>
-                    <h6 id="keep234" class="card-text">Keep reading...</h6>
+                    <a href="" style="text-decoration: none;"><h6 id="keep234" class="card-text">Keep reading...</h6></a>
                 </div>
             </div>
         </div>
