--- a/index.html
+++ b/index.html
@@ -289,19 +289,32 @@ student to teacher ratio, and increased interactions with faculty.
 
             <!--feature div-->
             <div id="feature">
-                <p style="color: #ffffff;margin-top:50px;font-family:'Roboto';"> FEATURED PROGRAMS</p>
+                <p style="color: #ffffff;margin-top:60px;font-family:'Roboto';font-size:15px;"> FEATURED PROGRAMS</p>
                 <img src="assets/fixed.png">
             </div>
 
             <!--learning div-->
             <div id="learning">
-                <p style="color: #ffffff;margin-top:50px;font-family:'Roboto';">Learning</p>
-                <img src="assets/plan.png">
+                <p style="color: #ffffff;margin-top:60px;font-family:'Roboto';font-size:15px;">LEARNING</p>
+                <div>
+                    <a href="" style="text-decoration: none;">
+                        <p id="footpara">Our Plans</p>
+                    </a>
+                    <a href="" style="text-decoration: none;">
+                        <p id="footpara">Free Trial</p>
+                    </a>
+                    <a href="" style="text-decoration: none;">
+                        <p id="footpara">Academic Solutions</p>
+                    </a>
+                    <a href="" style="text-decoration: none;">
+                        <p id="footpara">Business Solutions</p>
+                    </a>
+                </div>
             </div>
 
             <!--support div-->
             <div id="support">
-                <p style="color: #ffffff;margin-top:50px;font-family:'Roboto';">Support Forum</p>
+                <p style="color: #ffffff;margin-top:60px;font-family:'Roboto';font-size:15px;">SUPPORT FORUM</p>
                 <pre style="color:#969595;font-size:12px;font-family:'Roboto' ;">Write your email into below field and join our
 quick support forum.
             </pre>
@@ -315,12 +328,19 @@ quick support forum.
         <!--basefoot-->
         <div id="basefoot">
             <p id="copyright">Copyright &copy; 2019 Learned</p>
-            <!-- <img src="assets/Site.png" style="float: right;margin-top: 20px;margin-right:100px;"> -->
             <div style="margin-top: 20px;margin-left:400px;display: inline-flex;">
-                <p id="basepara">Site Map</p>
-                <p id="basepara">Privacy Policy</p>
-                <p id="basepara">Website Use Policy</p>
-                <p id="basepara"> Cookie Policy</p>
+                <a href="" style="text-decoration: none;">
+                    <p id="basepara">Site Map</p>
+                </a>
+                <a href="" style="text-decoration: none;">
+                    <p id="basepara">Privacy Policy</p>
+                </a>
+                <a href="" style="text-decoration: none;">
+                    <p id="basepara">Website Use Policy</p>
+                </a>
+                <a href="" style="text-decoration: none;">
+                    <p id="basepara"> Cookie Policy</p>
+                </a>
             </div>
         </div>
     </div>
