--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
     <!--curve design under heading class-->
     <img id="curveimage" src="assets/curve.png">
 
-    <h2 style="margin-left:565px;font-weight: bolder;font-family:Work Sans;position: absolute;margin-top:800px;">Our
-        Department</h2>
+    <h2 class="section-1">Our Department</h2>
     <pre id="hundered">
         A hundred thousand grateful loves to your dear papa and mamma. Is your 
         poor brother recovered of his rack-punch? Oh, dear! Oh, dear! How men 
